--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Page</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
     <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
-        <h1>ARDHICHAIN</h1>
+        <h1 class="font-effect-shadow-multiple">ARDHICHAIN</h1>
     </header>
     <div class="container">
         <div class="search-bar">
             <input type="text"  id="searchInput" placeholder="Enter title deed number..">
-            <button onclick="search()">Search</button>
+            <button onclick="search()"><i class="fa fa-search"></i></button>
         </div>
         <div class="results" id="results">
             <!-- Results will be displayed here -->
