--- a/static/styles.css
+++ b/static/styles.css
@@ -51,7 +51,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('/ardhi.jpeg');
+    background-image: url('./ardhi.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
