--- a/static/styles.css
+++ b/static/styles.css
@@ -1,57 +1,8 @@
-/* body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-button {
-    background-color: #4CAF50;
-    padding:15px;
-    border-radius:10px
-}
-#searchInput {
-    width:20%;
-    padding:20px 10px;
-    border-radius: 20px; 
-}
-
-header {
-    background-color:#4CAF50;
-    color: white;
-    text-align: center;
-    padding: 1em;
-}
-
-.container {
-    padding: 2em;
-}
-
-.search-bar {
-    text-align: center;
-    margin-bottom: 2em;
-}
-
-.results {
-    min-height: 200px;
-    border: 1px solid #ddd;
-    padding: 1em;
-    margin-bottom: 2em;
-}
-
-footer {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-    padding: 1em;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-} */
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('./ardhi.jpeg');
+    background-image: url('/static/ardhi.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -87,6 +38,11 @@ button {
     border-radius: 20px; 
 }
 
+#nationalIdInput {
+    width:80%;
+    padding:20px 10px;
+    border-radius: 20px;  
+}
 .container {
     padding: 2em;
     
@@ -103,12 +59,16 @@ button {
     border: none;
     padding: 1em;
     margin-bottom: 2em;
-    
+    text-align: center;
+    color: aliceblue;
 }
 
 .verification {
     text-align: center;
     margin-top: 2em;
+    width:80%;
+    padding:20px 10px;
+    border-radius: 20px; 
 }
 
 footer {
