--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
     </header>
     <div class="container">
         <div class="search-bar">
+        <h2 >Get land information, verify and <br>transfer ownership seemlessly!!!</h2>
+        </div>
+        <div class="search-bar">
             <input type="text"  id="searchInput" placeholder="Enter title deed number..">
             <button onclick="search()"><i class="fa fa-search"></i></button>
         </div>
@@ -22,7 +25,7 @@
         </div>
         <div class="verification" id="verification" style="display:none;">
             <input type="text" id="nationalIdInput" placeholder="Enter your National ID...">
-            <button onclick="verifyNationalId()">Verify</button>
+            <button onclick="verifyNationalId()">Proceed to transact</button>
         </div>
     </div>
     <footer>
@@ -122,7 +125,7 @@
                     try {
                         const result = JSON.parse(text);  // Attempt to parse JSON
                         if (result.verified) {
-                            window.location.href = '/buyer.html';
+                            window.location.href = '/new-owner';
                         } else {
                             alert('National ID verification failed.');
                         }
